--- a/ControleDeBoletos/ControleDeBoletos/ControleDeBoletos.csproj
+++ b/ControleDeBoletos/ControleDeBoletos/ControleDeBoletos.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Helpers\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
