--- a/ControleDeBoletos/ControleDeBoletos/ControleDeBoletos.csproj
+++ b/ControleDeBoletos/ControleDeBoletos/ControleDeBoletos.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HandyControl" Version="3.4.0" />
+    <PackageReference Include="HandyControl.Lang.pt-BR" Version="3.4.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.19" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.19" />
   </ItemGroup>
